--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     }
   },
   "dependencies": {
-    "naudiodon": "^2.3.6",
-    "sitka": "^1.1.1"
+    "deepspeech": "^0.9.3",
+    "dotenv": "^16.4.4",
+    "joi": "^17.12.1",
+    "naudiodon": "^2.3.6"
   }
 }
